[Phase 4] Enhanced metadata extraction + Export feature - Instagram/YouTube titles working, JSON/CSV export added

--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,11 @@
     <!-- Header Section -->
     <header>
       <h1>📚 Smart Bookmarks</h1>
-      <button id="settings-btn" title="Settings">⚙️</button>
+      <div class="header-actions">
+  <button id="export-btn" title="Export Bookmarks">📥</button>
+  <button id="settings-btn" title="Settings">⚙️</button>
+</div>
+
     </header>
     
     <!-- Current Page Info -->
