--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,10 @@
       <div class="header-actions">
   <button id="export-btn" title="Export Bookmarks">📥</button>
   <button id="settings-btn" title="Settings">⚙️</button>
+              <button class="header-btn" id="statsBtn" title="Statistics">
+                <span class="icon">📊</span>
+            </button>
+
 </div>
 
     </header>
